# market-sentinel

./: .env.example  .gitignore  ARCHITECTURE.md  CODING_RULES.md  PROJECT_PLAN.md  README.md  RUNBOOK.md  pyproject.toml
config/: README.md  alert_rules.yaml  markets.yaml  moving_averages.yaml  settings.yaml  watchlist.yaml
config/portfolio/: holdings.csv  watchlist.csv
config/universes/: ftse_100.csv  ftse_350.csv  sp_500.csv
outputs/: failed_dividend_updates.csv  failed_price_updates.csv
scripts/: README.md  backfill_market_data.py  backfill_moving_averages.py  calculate_dividends.py  calculate_moving_averages.py  calculate_risk_flags.py  check_data_health.py  detect_crossovers.py  generate_charts.py  generate_excel_report.py  generate_pdf_report.py  init_database.py  load_universe.py  run_daily_fast.py  run_daily_process.py  run_weekly_full.py  run_weekly_maintenance.py  send_daily_alert_email.py  update_ftse100_universe.py  update_ftse350_universe.py  update_market_data.py  update_sp500_universe.py
src/market_sentinel/: __init__.py  cli.py  config_loader.py
src/market_sentinel/alerts/: __init__.py  email_notifier.py  notifiers.py  rules.py
src/market_sentinel/analytics/: __init__.py  crossovers.py  data_health.py  dividends.py  flag_patterns.py  moving_averages.py  returns.py  risk_flags.py  trade_candidates.py
tests/: __init__.py  test_charts.py  test_config_loader.py  test_crossovers.py  test_daily_process.py  test_data_health.py  test_database_schema.py  test_dividends.py  test_email_notifier.py  test_excel_report.py  test_flag_patterns.py  test_moving_averages.py  test_pdf_report.py  test_portfolio_loader.py  test_price_loader.py  test_project_imports.py  test_risk_flags.py  test_timing.py  test_trade_candidates.py  test_universe_loader.py  test_universe_sources.py
(+24 files in other folders)
