[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "market-sentinel"
version = "0.1.0"
description = "Beginner-friendly stock analysis project for FTSE 350 and S&P 500 shares."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "market-sentinel contributors" }
]
dependencies = [
  "pandas>=2.2",
  "openpyxl>=3.1",
  "matplotlib>=3.8",
  "python-dotenv>=1.0",
  "PyYAML>=6.0",
  "duckdb>=1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4"
]

[project.scripts]
market-sentinel = "market_sentinel.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
